--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -17,12 +17,29 @@ Bij het digitaliseren van lockers op evenementen kan er een uitdaging ontstaan d
 Een extra problematiek doet zich voor als de QR-code scanners niet optimaal functioneren. Deze problemen kunnen ontstaan door onveranderbare factoren zoals hevige zon of felle regen. Eveneens door QR-code scanners die foutief zijn afgesteld of zijn aangetast tijdens het transport of verplaatsing van de lockers. Ook hebben mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp aan te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
 
 \newpage
-\section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
+\section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}
 \label{sec:onderzoeksvraag}
 
-\begin{comment}
-    Wees zo concreet mogelijk bij het formuleren van je onderzoeksvraag. Een onderzoeksvraag is trouwens iets waar nog niemand op dit moment een antwoord heeft (voor zover je kan nagaan). Het opzoeken van bestaande informatie (bv. ``welke tools bestaan er voor deze toepassing?'') is dus geen onderzoeksvraag. Je kan de onderzoeksvraag verder specifiëren in deelvragen. Bv.~als je onderzoek gaat over performantiemetingen, dan  
-\end{comment}
+\subsection{Hoofdonderzoeksvragen}}
+Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek vooral focussen op het vinden van betere en snellere oplossingen voor de problemen waarmee Lockit Rentals vandaag de dag mee kampt. Deze te onderzoeken feiten kan worden samengevoegd in één hoofdonderzoeksvraag.
+
+\begin{itemize}
+    \item Welke technologieën kan het bedrijf Lockit Rentals toepassen om hun bedrijfsactiviteiten bij het verhuren van lockers te optimaliseren?
+\end{itemize}
+
+\subsection{Deelonderzoeksvragen}}
+
+Om de hoofdonderzoeksvraag verder op te splitsen kunnen we ook nog enkele deelvragen stellen.
+
+\begin{itemize}
+    \item Welke gebruikte technieken kunnen we optimaliseren om zo de doelstelling te behalen?
+    \item Hoe zijn deze hedendaagse technieken gebruikt binnen de bedrijfsactiviteiten?
+\end{itemize}
+
+%TODO: geef extra vragen
+
+Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. De volledige antwoorden op de opgestelde onderzoeksvragen zijn te vinden in de conclusie \ref{ch:conclusie}.
+
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}%
 \label{sec:onderzoeksdoelstelling}
