add new chapters + tekst aangepast + herlezen volgende keer is het nalezen van heel het document

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -43,9 +43,10 @@ Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. D
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}%
 \label{sec:onderzoeksdoelstelling}
-\begin{comment}
-    Wat is het beoogde resultaat van je bachelorproef? Wat zijn de criteria voor succes? Beschrijf die zo concreet mogelijk. Gaat het bv.\ om een proof-of-concept, een prototype, een verslag met aanbevelingen, een vergelijkende studie, enz.
-\end{comment}
+Het beoogd resultaat zal kunnen aantonen dat deze bachelorproef betere inzichten heeft verworpen voor het bedrijf Lockit Rentals. Uiteraard geeft het hoofdstuk verwerking van resultaten \ref{ch:verwerkingresultaten} geen garanties op de bedrijfsactiviteiten, het zijn wel factoren waar het bedrijf rekening mee kan houden in de toekomst om hun bedrijfsactiviteiten te optimaliseren.
+
+Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veiligere en klantvriendelijkere ervaring voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten uit voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen liggen van het bedrijf. 
+\newpage
 
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}%
