--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -1,13 +1,7 @@
 \chapter{\IfLanguageName{dutch}{Stand van zaken}{State of the art}}%
 \label{ch:stand-van-zaken}
 
-% Tip: Begin elk hoofdstuk met een paragraaf inleiding die beschrijft hoe
-% dit hoofdstuk past binnen het geheel van de bachelorproef. Geef in het
-% bijzonder aan wat de link is met het vorige en volgende hoofdstuk.
-
-% Pas na deze inleidende paragraaf komt de eerste sectiehoofding.
-
-Zoals in vorige hoofdstuk  \ref{ch:inleiding}  vermeld iszal er onderzoek gevoerd worden naar de mogelijke oplossingen waarmee het bedrijf Lockit Rentals mee kampt. Alvorens we deze oplossingen aanbieden is het van belang om inzicht te verweren van gebruikte technologieën. Aangezien de 2 probleemstelling zich voordoen, is de literatuurstudie onderverdeeld in enerzijds de werking van algemene QR-codes alsook de ontwikkeling van een chatbot. Door deze onderwerpen zorgvuldig te bestuderen kunnen we op basis van verweven kennis het onderzoek starten. 
+Zoals vermeld in het vorige hoofdstuk onderzoeken we oplossingen voor de problemen waarmee het bedrijf Lockit Rentals kampt. Alvorens deze oplossingen aangeboden worden is het van belang om inzicht te verweren van gebruikte technologieën. Om deze technologieën goed te doorgronden moet er bestudeerd worden welke hedendaagse technieken gehanteerd worden. De literatuurstudie is onderverdeeld in twee delen. Enerzijds het analyseren van een aangemaakte QR-code. Inclusief de uitwerking en de functionaliteit hoe deze QR-codes geïntegreerd zijn in de locker systemen. Het maken en integreren van een oplossing voor de verloren QR-code zal plaatsvinden in het tweede deel van de literatuurstudie. Door deze technologieën te bestuderen maken we gebruik van de verweven kennis om het oplossingsgericht onderzoek starten.
 
 \section{Wie is Lockit Rentals}%
 \label{sec:lockitRentals}
@@ -53,9 +47,9 @@ Uiteraard zijn ze niet de enige die smart locker systemen op de markt hebben. En
 \label{sec:QR-units}
 De smart locker systemen zijn toegankelijk met een geldige toegangscode die voorgesteld wordt als een QR-code. Het systeem bestaat uit verschillende soorten technologieën en elektronische componenten. De combinatie van hardware en software die nauw met elkaar samenwerken, vormen gezamenlijk één QR-unit \autocite{Jadhav2016} . De units hebben enkel 230 volt nodig om volledig operationeel te zijn. 
 
-De hardware bestaat uit mechanische onderdelen zoals een deurslot \ref{fig:lockerSlot}, het volledige frame van de unit maar ook uit elektronische onderdelen zoals een camera, Raspberry Pi, scherm, etc. De mobiele applicatie waar de QR-codes kan verkocht worden en zo ook genereren, heeft geen verband met de interne werking van een QR-unit. Het enige dat de QR-unit nodig heeft, is een correct opgebouwde QR-code. Hiermee krijgt de festivalganger toegang tot zijn/haar gehuurde locker.
+De hardware bestaat uit mechanische onderdelen zoals een deurslot \ref{fig:lockerSlot}, het volledige frame van de unit maar ook uit elektronische onderdelen zoals een camera, Raspberry Pi, digitaal scherm, etc. De mobiele applicatie waar de QR-codes kan verkocht worden en zo ook genereren, heeft geen verband met de interne werking van een QR-unit. Het enige dat de QR-unit nodig heeft, is een correct opgebouwde QR-code. Hiermee krijgt de festivalganger toegang tot zijn/haar gehuurde locker.
 
-Elke unit bevat 128 lockers verspreid over 4 kasten zoals te zien op figuur \ref{fig:lockerUnit}. De Locker units zijn waterdicht en dus optimaal voor plaatsing in niet overdekte locaties. Eén locker kast bevat 24 lockers, 4 grote die zich op de bovenste rij bevinden. De 20 overige zijn een iets kleiner formaat en situeren zich onderaan. De lange zijden van een QR-unit zijn uitklapbare luiken met aan elke kant twee kasten. Er zijn 4 kasten per unit aanwezig wat een totaal geeft van 128 lockers voorgesteld op figuur \ref{fig:lockerUnit} en  \ref{fig:lockerUnit2}.
+Elke unit bevat 128 lockers verspreid over 4 kasten zoals te zien op figuur \ref{fig:lockerUnit}. De locker units zijn waterdicht en dus optimaal voor plaatsing in niet overdekte locaties. Eén locker kast bevat 24 lockers, 4 grote die zich op de bovenste rij bevinden. De 20 overige zijn een iets kleiner formaat en situeren zich onderaan. De lange zijden van een QR-unit zijn uitklapbare luiken met aan elke kant twee kasten. Er zijn 4 kasten per unit aanwezig wat een totaal geeft van 128 lockers voorgesteld op figuur \ref{fig:lockerUnit} en  \ref{fig:lockerUnit2}.
 
 \begin{figure}[h]
     \centering
@@ -80,6 +74,8 @@ Elke unit bevat 128 lockers verspreid over 4 kasten zoals te zien op figuur \ref
     \caption{Een uitgetekende weergave van een locker unit.}
     \label{fig:lockerUnit2}
 \end{figure}}
+
+\newpage
 
 \section{Hoe is een QR-code opgebouwd}%
 \label{sec:opbouwQR-code}
