meer structuur in de lit

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -12,16 +12,17 @@ In de evenementenbranche wordt er steeds meer gebruikgemaakt van vernieuwde tech
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}%
 \label{sec:probleemstelling}
 
-Bij het digitaliseren van lockers op evenementen kan er een uitdaging ontstaan doordat de festivalgangers zelf verantwoordelijk zijn voor de inhoud van het kluisje, evenals hun gekochte toegangscode. Deze toegangscode, die als QR-code wordt voorgesteld kan bewaard worden op allerlei manieren. Enkele mogelijkheden zijn: bewaren als bijlage, bewaren op de mobiele applicatie van Lockit Rentals of wanneer als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat de persoon in kwestie de QR-code niet meer in bezit heeft of de festivalganger speelt de afdrukte versie van de QR-code kwijt. Voor dit probleem te voorkomen zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratierechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit probleem doeltreffend oplossen zodat hun bedrijfsactiviteiten verbeteren. \newline 
+Bij het digitaliseren van lockers op evenementen kan er een uitdaging ontstaan doordat de festivalgangers zelf verantwoordelijk zijn voor de inhoud van het kluisje, evenals hun gekochte toegangscode. Deze toegangscode, die als QR-code wordt voorgesteld kan bewaard worden op allerlei manieren. Enkele mogelijkheden zijn: bewaren als bijlage, bewaren op de mobiele applicatie van Lockit Rentals of wanneer als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat de persoon in kwestie de QR-code niet meer in bezit heeft of de festivalganger speelt de afgedrukte versie van de QR-code kwijt is. Om dit probleem te voorkomen zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratierechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit probleem doeltreffend oplossen zodat hun bedrijfsactiviteiten verbeteren. \newline 
 
 Een extra problematiek doet zich voor als de QR-code scanners niet optimaal functioneren. Deze problemen kunnen ontstaan door onveranderbare factoren zoals hevige zon of felle regen. Eveneens door QR-code scanners die foutief zijn afgesteld of zijn aangetast tijdens het transport of verplaatsing van de lockers. Ook hebben mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp aan te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
+
 
 \newpage
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}
 \label{sec:onderzoeksvraag}
 
 \subsection{Hoofdonderzoeksvragen}}
-Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek vooral focussen op het vinden van betere en snellere oplossingen voor de problemen waarmee Lockit Rentals vandaag de dag mee kampt. Deze te onderzoeken feiten kan worden samengevoegd in één hoofdonderzoeksvraag.
+Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek zich vooral focussen op het vinden van betere en snellere oplossingen voor de problemen waarmee Lockit Rentals vandaag de dag mee kampt. Deze te onderzoeken feiten kunnen worden samengevoegd in één hoofdonderzoeksvraag.
 
 \begin{itemize}
     \item Welke technologieën kan het bedrijf Lockit Rentals toepassen om hun bedrijfsactiviteiten bij het verhuren van lockers te optimaliseren?
@@ -29,7 +30,7 @@ Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek voora
 
 \subsection{Deelonderzoeksvragen}}
 
-Om de hoofdonderzoeksvraag verder op te splitsen kunnen we ook nog enkele deelvragen stellen.
+Om de hoofdonderzoeksvraag verder op te splitsen, kunnen we ook nog enkele deelvragen stellen.
 
 \begin{itemize}
     \item Welke gebruikte technieken kunnen we optimaliseren om zo de doelstelling te behalen?
@@ -38,14 +39,14 @@ Om de hoofdonderzoeksvraag verder op te splitsen kunnen we ook nog enkele deelvr
 
 %TODO: geef extra vragen
 
-Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. De volledige antwoorden op de opgestelde onderzoeksvragen zijn te vinden in de conclusie \ref{ch:conclusie}.
+Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. De volledige antwoorden op de gestelde onderzoeksvragen zijn te vinden in de conclusie \ref{ch:conclusie}.
 
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}%
 \label{sec:onderzoeksdoelstelling}
-Het beoogd resultaat zal kunnen aantonen dat deze bachelorproef betere inzichten heeft verworpen voor het bedrijf Lockit Rentals. Uiteraard geeft het hoofdstuk verwerking van resultaten \ref{ch:verwerkingresultaten} geen garanties op de bedrijfsactiviteiten, het zijn wel factoren waar het bedrijf rekening mee kan houden in de toekomst om hun bedrijfsactiviteiten te optimaliseren.
+Het beoogd resultaat zal kunnen aantonen dat deze bachelorproef betere inzichten heeft verworpen voor het bedrijf Lockit Rentals. Uiteraard geeft het hoofdstuk verwerking van resultaten \ref{ch:verwerkingresultaten} geen garanties op de bedrijfsactiviteiten, het zijn wel factoren waar het bedrijf rekening mee kan houden in de toekomst om deze te optimaliseren.
 
-Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veiligere en klantvriendelijkere ervaring voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten uit voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen liggen van het bedrijf. 
+Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veiligere en meer klantvriendelijke ervaringen voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten uit voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen ligt van het bedrijf. 
 \newpage
 
 
