--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -137,7 +137,7 @@
 
 %---------- Inhoud, lijst figuren, ... -----------------------------------------
 
-\tableofcontents
+∑\tableofcontents
 
 % In a list of figures, the complete caption will be included. To prevent this,
 % ALWAYS add a short description in the caption!
